[gd_scene load_steps=4 format=3 uid="uid://c3n3285mbc4sx"]

[ext_resource type="Script" path="res://Scenes/meteor.gd" id="1_4vj2c"]
[ext_resource type="Texture2D" uid="uid://dxvy8c06cwovl" path="res://Space shooter redux/PNG/Meteors/meteorBrown_big1.png" id="1_eep7n"]

[sub_resource type="CircleShape2D" id="CircleShape2D_kmygb"]
radius = 41.5933

[node name="Meteor" type="Area2D"]
collision_layer = 2
collision_mask = 9
script = ExtResource("1_4vj2c")

[node name="MeteorSprite" type="Sprite2D" parent="."]
texture = ExtResource("1_eep7n")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 0)
shape = SubResource("CircleShape2D_kmygb")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
